--- a/.github/workflows/SuperLinter.yml
+++ b/.github/workflows/SuperLinter.yml
@@ -35,13 +35,15 @@ jobs:
       # Checkout the code base #
       ##########################
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       ################################
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: docker://github/super-linter:v3
+        uses: super-linter/super-linter@v7
         env:
           VALIDATE_ALL_CODEBASE: true 
           DEFAULT_BRANCH: master
