Fix ruff linting issues and configure SuperLinter for Python only
- Fix all trailing whitespace issues
- Convert Optional[X] to X | None syntax (Python 3.10+)
- Fix unused imports in tests
- Fix ambiguous variable name (l -> line)
- Remove unused variable assignment
- Use f-string instead of % formatting
- Configure SuperLinter to only run ruff on Python files
- Use slim variant of super-linter for faster runs

--- a/.github/workflows/SuperLinter.yml
+++ b/.github/workflows/SuperLinter.yml
@@ -43,8 +43,18 @@ jobs:
       # Run Linter against code base #
       ################################
       - name: Lint Code Base
-        uses: super-linter/super-linter@v7
+        uses: super-linter/super-linter/slim@v7
         env:
-          VALIDATE_ALL_CODEBASE: true 
+          VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Only validate Python files
+          VALIDATE_PYTHON_RUFF: true
+          # Disable all other linters
+          VALIDATE_BASH: false
+          VALIDATE_GITHUB_ACTIONS: false
+          VALIDATE_GITLEAKS: false
+          VALIDATE_JSON: false
+          VALIDATE_MARKDOWN: false
+          VALIDATE_NATURAL_LANGUAGE: false
+          VALIDATE_YAML: false
