Fix SuperLinter config: use only include mode
SuperLinter doesn't allow mixing VALIDATE=true and VALIDATE=false.
When you set any VALIDATE_X=true, it runs in include-only mode.

--- a/.github/workflows/SuperLinter.yml
+++ b/.github/workflows/SuperLinter.yml
@@ -48,13 +48,5 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Only validate Python files
+          # Only validate Python with ruff
           VALIDATE_PYTHON_RUFF: true
-          # Disable all other linters
-          VALIDATE_BASH: false
-          VALIDATE_GITHUB_ACTIONS: false
-          VALIDATE_GITLEAKS: false
-          VALIDATE_JSON: false
-          VALIDATE_MARKDOWN: false
-          VALIDATE_NATURAL_LANGUAGE: false
-          VALIDATE_YAML: false
